Java 21 & Lumen - Moved to Java 21 - Replaced usage of ConsoleManager by Lumen